[project]
name = "house-price-api"
version = "1.0.0"
description = "Production-grade House Price Prediction API (CatBoost + FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pandas>=2.0",
  "numpy>=2.0",
  "catboost>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
